--- a/app/templates/card.html
+++ b/app/templates/card.html
@@ -25,7 +25,8 @@
         <div class="card-body row">
             {% if profile.picture_url != null: %}
             <div class="text-center col-12 col-lg-4">
-                <img class="w-100" src="{{ profile.picture_url }}" alt="{{ profile.first_name }} {{ profile.last_name }}">
+                <img class="w-100" src="{{ profile.picture_url }}"
+                     alt="{{ profile.first_name }} {{ profile.last_name }}">
             </div>
             {% endif %}
 
@@ -51,7 +52,7 @@
                     <li>
                         <h5>
                             <i class="fa fa-dollar"></i>
-                            Hodinová sazba: {{ profile.price_per_hour }}
+                            Hodinová sazba: {{ profile.price_per_hour }} CZK
                         </h5>
                     </li>
                     {% endif %}
@@ -67,14 +68,14 @@
                 <h5><i class="fa fa fa-phone"></i> Telefonní čísla:</h5>
                 <ul>
                     {% for phone in profile.contact.telephone_numbers %}
-                    <li>{{ tag.phone }}</li>
+                    <li>{{ phone }}</li>
                     {% endfor %}
                 </ul>
 
                 <h5><i class="fa fa-at"></i> E-mailové adresy:</h5>
                 <ul>
                     {% for email in profile.contact.emails %}
-                    <li>{{ tag.email }}</li>
+                    <li>{{ email }}</li>
                     {% endfor %}
                 </ul>
 
