--- a/app/templates/card.html
+++ b/app/templates/card.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <link rel="stylesheet" href="css/main.css">
+    <link rel="stylesheet" href="{{url_for('static',filename='css/main.css')}}">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
     <link rel="icon" href="assets/arrow/png/black-blue.png">
@@ -84,7 +84,7 @@
                 {% if profile.bio != null: %}
                 <hr>
                 <a>{{ profile.bio }}</a>
-                {% endfor %}
+                {% endif %}
             </div>
         </div>
 
@@ -93,7 +93,7 @@
 </div>
 
 
-<script src="js/main.js"></script>
+<script src="{{url_for('static',filename='js/main.js')}}"></script>
 
 </body>
 </html>
