Přidání lektora do db

--- a/app/templates/lecturercreate.html
+++ b/app/templates/lecturercreate.html
@@ -2,16 +2,13 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="{{url_for('static',filename='css/main.css')}}">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
-    <link rel="icon" href="{{url_for('static',filename='assets/arrow/png/black-blue.png')}}">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
 <body>
 
-    <form>
+    <form action="{{ url_for('post')}}" method="POST">
         <label for="title_before">Titul před jménem:</label><br>
         <input type="text" id="title_before" name="title_before"><br>
         <label for="first_name">Křestní jméno:</label><br>
