Zobrazeni lektoru z databaze

--- a/app/templates/lecturercreate.html
+++ b/app/templates/lecturercreate.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 
-    <form action="{{ url_for('post')}}" method="POST">
+    <form method="POST">
         <label for="title_before">Titul před jménem:</label><br>
         <input type="text" id="title_before" name="title_before"><br>
         <label for="first_name">Křestní jméno:</label><br>
