Pokračování odstranění lektora

--- a/app/templates/lecturerdelete.html
+++ b/app/templates/lecturerdelete.html
@@ -38,7 +38,7 @@
         <input type="text" name="emails_edit" id="emails_edit"><br>
         <label for="tags_names_edit">Tagy: </label><br>
         <input type="text" name="tags_names_edit" id="tags_names_edit"><br>
-        <input type="hidden" name="_method" value="PUT">
+        <input type="hidden" name="_method" value="DELETE">
         <input type="submit" value="Odeslat">
         
 
